@startuml raw_image_converter_クラス図

class Main {
    - configReader: ConfigReader
    - binaryFileReader: BinaryFileReader
    - converter: Converter
    - textFileWriter: TextFileWriter
    + execute_program(config_file_path: str, binary_file_path: str, output_file_path: str) -> None
}

class ConfigReader {
    + read_config(config_file_path: str) -> Config
}

class BinaryFileReader {
    + read_binary_file(binary_file_path: str) -> bytes
}

class Converter {
    + convert(binary_data: bytes, config: Config) -> List[int]
}

class TextFileWriter {
    + write_text_file(output_file_path: str, converted_data: List[int], config: Config) -> bool
}

class Config {
    + endian: str
    + byte_size: int
    + width: int
    + height: int
}

Main --> ConfigReader
Main --> BinaryFileReader
Main --> Converter
Main --> TextFileWriter
ConfigReader --> Config

@enduml